# pagarme-py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.junie/: guidelines.md
src/pagarme_py/: __init__.py  client.py  exceptions.py
src/pagarme_py/models/: address.py  cards.py  charges.py  config.py  customers.py  items.py  orders.py  payments.py
src/pagarme_py/resources/: charges.py  customers.py  orders.py
tests/: test_cards.py  test_charges.py  test_client.py  test_customers.py  test_orders.py  test_sync_client.py
