[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagarme-python-sdk"
version = "0.2.0"
description = "Modern Python SDK for Pagar.me API v5"
readme = "README.md"
authors = [
    { name = "Ramon Soares", email = "eu@ramonsoares.com" }
]
keywords = ["pagarme", "payments", "sdk", "api", "gateway", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/ramon/pagarme-py"
Repository = "https://github.com/ramon/pagarme-py"
Issues = "https://github.com/ramon/pagarme-py/issues"
Documentation = "https://docs.pagar.me/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "isort>=5.13.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "PT", "ARG", "PTH"]
ignore = ["S101", "ANN401", "S105", "S106"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/pagarme_py"]
